--- a/Modeling/MissingValues.ipynb
+++ b/Modeling/MissingValues.ipynb
@@ -8,7 +8,6 @@
       "collapsed_sections": [
         "4ACEOzhEM5K5"
       ],
-      "authorship_tag": "ABX9TyNsK2TfFPimon8n+QfTGx+9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,17 +30,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "hC5eic-oRhdL",
-        "outputId": "b464b306-7272-4230-e872-8cbb47b99a5c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "b464b306-7272-4230-e872-8cbb47b99a5c"
       },
       "source": [
         "!pip install impyute\r\n",
         "!pip install datawig\r\n",
         "!pip install missingpy "
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -87,7 +86,7 @@
         "from matplotlib import pyplot as plt\r\n",
         "import seaborn as sns"
       ],
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -99,8 +98,128 @@
         "pd.set_option('display.max_columns', None)  # or 1000\r\n",
         "pd.set_option('display.max_rows', None)"
       ],
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "l9xKoLwpuuxH",
+        "outputId": "3edd19fb-d7aa-405a-aacd-684f1ea4f7f9",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 195
+        }
+      },
+      "source": [
+        "# Data set\r\n",
+        "import plotly.express as px\r\n",
+        "df = px.data.tips()\r\n",
+        "df.head()"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>total_bill</th>\n",
+              "      <th>tip</th>\n",
+              "      <th>sex</th>\n",
+              "      <th>smoker</th>\n",
+              "      <th>day</th>\n",
+              "      <th>time</th>\n",
+              "      <th>size</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>16.99</td>\n",
+              "      <td>1.01</td>\n",
+              "      <td>Female</td>\n",
+              "      <td>No</td>\n",
+              "      <td>Sun</td>\n",
+              "      <td>Dinner</td>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>10.34</td>\n",
+              "      <td>1.66</td>\n",
+              "      <td>Male</td>\n",
+              "      <td>No</td>\n",
+              "      <td>Sun</td>\n",
+              "      <td>Dinner</td>\n",
+              "      <td>3</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>21.01</td>\n",
+              "      <td>3.50</td>\n",
+              "      <td>Male</td>\n",
+              "      <td>No</td>\n",
+              "      <td>Sun</td>\n",
+              "      <td>Dinner</td>\n",
+              "      <td>3</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>23.68</td>\n",
+              "      <td>3.31</td>\n",
+              "      <td>Male</td>\n",
+              "      <td>No</td>\n",
+              "      <td>Sun</td>\n",
+              "      <td>Dinner</td>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>24.59</td>\n",
+              "      <td>3.61</td>\n",
+              "      <td>Female</td>\n",
+              "      <td>No</td>\n",
+              "      <td>Sun</td>\n",
+              "      <td>Dinner</td>\n",
+              "      <td>4</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   total_bill   tip     sex smoker  day    time  size\n",
+              "0       16.99  1.01  Female     No  Sun  Dinner     2\n",
+              "1       10.34  1.66    Male     No  Sun  Dinner     3\n",
+              "2       21.01  3.50    Male     No  Sun  Dinner     3\n",
+              "3       23.68  3.31    Male     No  Sun  Dinner     2\n",
+              "4       24.59  3.61  Female     No  Sun  Dinner     4"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 3
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -116,7 +235,7 @@
         "# Missing data of Numeric data - Alwayz NaN\r\n",
         "# Missing data of DateTime data - Alwayz NaT\r\n"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -147,7 +266,7 @@
         "from google.colab import files\r\n",
         "uploaded = files.upload()"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -189,7 +308,7 @@
         "missing_value_formats = [\"n.a.\",\"?\",\"NA\",\"n/a\", \"na\", \"--\"]\r\n",
         "Employees = pd.read_csv(\"employees.csv\", na_values = missing_value_formats)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -218,7 +337,7 @@
         "# set few rows (5% rows) of col_int to missing values\r\n",
         "Employees.loc[np.random.randint(0,1000, size=Employees.shape[0]//20),'col_float'] = np.nan\r\n"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -233,7 +352,7 @@
       "source": [
         "print(np.random.randn(24))"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -260,7 +379,7 @@
       "source": [
         "Employees.head()"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -408,7 +527,7 @@
         "# print(Employees.describe(include='all',datetime_is_numeric=True))\r\n",
         "print(Employees.describe(include='all'))"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -511,7 +630,7 @@
         "missing_data\r\n",
         "# Data is ordered by missing %"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -640,7 +759,7 @@
         "Employees_miss = Employees[[col for col in Employees.columns if Employees[col].isnull().any()]]\r\n",
         "list(Employees_miss) # Date_of_Birth var will not be here as it doesn't have any missing values"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -682,7 +801,7 @@
         "plt.ylabel('Percent of missing values', fontsize=15)\r\n",
         "plt.title('Percent missing data by feature', fontsize=15)"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -728,7 +847,7 @@
         "             color='MissingCount',labels={'index':'variables'})\r\n",
         "fig.show()"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -805,7 +924,7 @@
         "import missingno as msno\r\n",
         "msno.bar(Employees)"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -848,7 +967,7 @@
         "# To see if there are any patterns in missing values \r\n",
         "msno.matrix(Employees)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -891,7 +1010,7 @@
         "# Measures nullity correlation\r\n",
         "msno.heatmap(Employees)"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -951,7 +1070,7 @@
         "Employees_rows_Var = Employees.dropna(subset=['col_date'],how='any')\r\n",
         "print(Employees_rows_Var.shape)"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -995,7 +1114,7 @@
         "Employees_cols_Var = Employees.drop(['col_date'],axis=1)\r\n",
         "print(Employees_cols_Var.shape)"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1027,7 +1146,7 @@
         "Employees['Salary_Fill0'] = Employees['Salary'].fillna(0)\r\n",
         "Employees['Gender_FillNoGender'] = Employees['Gender'].fillna('No Gender')"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1062,7 +1181,7 @@
         "Employees_NumericalVars_Mean = pd.DataFrame(imp_mean.fit_transform(numerical_features), columns = numerical_features.columns)\r\n",
         "Employees_NumericalVars_Mean.head()"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1158,15 +1277,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "IOXBeYJMXQwq",
-        "outputId": "5f130dc3-9b2e-4d6c-e6f8-f5c0ca89084b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "5f130dc3-9b2e-4d6c-e6f8-f5c0ca89084b"
       },
       "source": [
         "Employees.isnull().sum()"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1198,10 +1317,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "d5s5X3KbWTc6",
-        "outputId": "99218c2c-bdb3-4601-e01f-aa4e7737d472",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "99218c2c-bdb3-4601-e01f-aa4e7737d472"
       },
       "source": [
         "# All missing values of a column are replaced by the column's mode\r\n",
@@ -1209,7 +1328,7 @@
         "Mode_encode = Mode_encode.apply(lambda x:x.fillna(x.value_counts().index[0]))\r\n",
         "Mode_encode.isnull().sum()"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1255,7 +1374,7 @@
         "\r\n",
         "Employees['Gender_FillMode'] = Employees['Gender'].fillna(Employees['Gender'].mode()[0])"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1270,7 +1389,7 @@
       "source": [
         "Employees['Gender'].mode()"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1314,7 +1433,7 @@
         "# filling NAs based on groups of another column\r\n",
         "Employees['Salary_BackwardFillVar'] = Employees.groupby(['Gender'])['Salary'].bfill()"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1334,7 +1453,7 @@
       "source": [
         "Employees['Salary_fFill_bFill_Avg'] = pd.concat([Employees['Salary'].ffill(), Employees['Salary'].bfill()]).groupby(level=0).mean()"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1354,7 +1473,7 @@
       "source": [
         "Employees['Salary_replace'] = Employees['Salary'].replace(to_replace = np.nan, value = 0) #,inplace=True"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1399,8 +1518,7 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "V-2mU_n40XsI",
         "outputId": "2a3e029c-b862-4ed4-f03e-b27d6f52642e"
@@ -1413,7 +1531,7 @@
         "Employees_numerical_KNN = pd.DataFrame(imputer.fit_transform(numerical_features),columns = numerical_features.columns)\r\n",
         "Employees_numerical_KNN.head()"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1590,8 +1708,7 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "m00QbQX7VXF-",
         "outputId": "eb955a24-e54d-48ec-9ca0-ab086dafbb66"
@@ -1604,7 +1721,7 @@
         "Employees_numerical_KNN = pd.DataFrame(data=fast_knn(numerical_features.values, k=30),columns = numerical_features.columns)\r\n",
         "Employees_numerical_KNN.head()"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1802,7 +1919,7 @@
         "Employees_numerical_MICE = pd.DataFrame(data=mice(numerical_features.values),columns = numerical_features.columns)\r\n",
         "Employees_numerical_MICE.head()"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1989,7 +2106,7 @@
         "# Employees_numerical_MICE = pd.DataFrame(mice_imputer.fit_transform(numerical_features) ,columns = numerical_features.columns)\r\n",
         "# Employees_numerical_MICE.head()"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2009,7 +2126,7 @@
         "Employees['Salary_mice'] = mice_imputer.fit_transform(Employees[['Salary']])\r\n",
         "Employees.head()"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2275,7 +2392,7 @@
         "Employees['Salary_Interpolate'] = Employees['Salary'].interpolate()\r\n",
         "Employees['Salary_Interpolate_linear'] = Employees['Salary'].interpolate(method='linear', direction = 'forward')"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2293,7 +2410,7 @@
         "s[4, 5, 9, 11, 18, 19, 33, 34, 46, 47, 48] = np.nan\r\n",
         "s.plot()"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2335,7 +2452,7 @@
       "source": [
         "s.interpolate().plot()"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2401,7 +2518,7 @@
         "imputed = imputer.predict(Employees)\r\n",
         "imputed.head()"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3425,7 +3542,7 @@
         "imputed = imputer.predict(df_test)\r\n",
         "imputed.head()"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3544,7 +3661,7 @@
         "Employees_MissImputed = pd.DataFrame(miss_imputer.fit_transform(numerical_features),columns = numerical_features.columns)\r\n",
         "Employees_MissImputed.head()"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3750,7 +3867,7 @@
       "source": [
         "Employees.head()"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4030,7 +4147,7 @@
         " 'col_float',\r\n",
         " 'col_date']"
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
