--- a/Interview Questions/Python_Refresher.ipynb
+++ b/Interview Questions/Python_Refresher.ipynb
@@ -3212,7 +3212,9 @@
         "print(f\"Hello, {name}\")\n",
         "\n",
         "print(\"\\nRestrict decimal places\")\n",
-        "size = input(\"What is size of your house in sq ft : \")\n",
+        "# any value you enter in the input function, it sees as a string. It doesn't matter if you enter digits or letters, the input will be converted to a string.\n",
+        "# to get numeric int(input())\n",
+        "size = input(\"What is size of your house in sq ft : \")  \n",
         "x = float(size)/10.8\n",
         "print(f\"Sq meters = {x:.2f}\")\n",
         "print(f\"Sq ft = {x*10.8:.2f}\")"
@@ -3229,6 +3231,61 @@
             "What is size of your house in sq ft : 100\n",
             "Sq meters = 9.26\n",
             "Sq ft = 100.00\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zq332fDVTV9Y",
+        "outputId": "37c0553a-8a31-4cff-c0ff-388238e725ad",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "num1 = float(input(\"Enter one number:\"))\r\n",
+        "num2 = float(input(\"Enter second number:\"))\r\n",
+        "print(num1+num2)"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Enter one number:2\n",
+            "Enter second number:23\n",
+            "25.0\n",
+            "lalalalalalala\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DRwoYapAXg-M",
+        "outputId": "b63274cd-8e4d-4d26-d475-957e3789a8f7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "print(\"la\"*7)\r\n",
+        "print(list('danger!'))  # splits the word into characters\r\n",
+        "print(['danger!'])  # [] doesn't split into characters"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "lalalalalalala\n",
+            "['d', 'a', 'n', 'g', 'e', 'r', '!']\n",
+            "['danger!']\n"
           ],
           "name": "stdout"
         }
