--- a/Natural Language Processing/NLP_in_Tensorflow.ipynb
+++ b/Natural Language Processing/NLP_in_Tensorflow.ipynb
@@ -6,7 +6,7 @@
       "name": "NLP in Tensorflow.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP6Sob55m9Q3PFsSs1Dq3i6",
+      "authorship_tag": "ABX9TyM4PzHGqRaY5rXYzMyTWVFX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,7 +25,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/sandhyaparna/Python-DataScience-CookBook/blob/master/NLP_in_Tensorflow.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/sandhyaparna/Python-DataScience-CookBook/blob/master/Natural%20Language%20Processing/NLP_in_Tensorflow.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -40,7 +40,7 @@
       "source": [
         "! pip install emoji"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -73,7 +73,7 @@
         "from tensorflow.keras import preprocessing\n",
         "from tensorflow.keras.layers.experimental.preprocessing import TextVectorization"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -128,7 +128,26 @@
         "raw_train_ds.map(lambda x, y: x)\n",
         "\n",
         "# To get vocab size of the vectorize layer\n",
-        "print('Vocabulary size: {}'.format(len(vectorize_layer.get_vocabulary())))\n"
+        "print('Vocabulary size: {}'.format(len(vectorize_layer.get_vocabulary())))"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vViaEROli2uT"
+      },
+      "source": [
+        "# Activation functions:\n",
+        "* softplus\n",
+        "* ReLU\n",
+        "* Exponential\n",
+        "* Piece-wise linear\n",
+        "\n",
+        "# loss functions\n",
+        "* Region Proposal Network box\n",
+        "* bject Localization Network RPN centerness \n"
       ],
       "execution_count": null,
       "outputs": []
@@ -182,7 +201,7 @@
         "raw_data_sample = 'ത'+'\"Pandemonium\" -is a horror® movie spoof - !that comes off more stupid than funny.<br /><br />Believe me when I tell you, I love comedies. Especially comedy spoofs. \"Airplane\", \"The Naked Gun\" trilogy, \"Blazing Saddles\", \"High Anxiety\", and \"Spaceballs\" are some of my favorite comedies that spoof a particular genre. \"Pandemonium\" is not up there with those films. Most of the scenes in this movie had me sitting there in stunned silence because the movie wasn\\'t all that funny. There are a few laughs in the film, but when you watch a comedy, you expect to laugh a lot more than a few times and that\\'s all this film has going for it. Geez, \"Scream\" had more laughs than this film and that was more of a horror film. How bizarre is that?<br /><br />*1/2 (out of four)'\n",
         "custom_standardization(raw_data_sample)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -334,7 +353,7 @@
         "\n",
         "print(raw_data_sample.encode(\"utf-8\").decode(\"utf-8\"))\n"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -360,7 +379,7 @@
         "re.findall(r'[%s]', raw_data_sample)\n",
         "print(re.findall(r'[%s] % re.escape(string.punctuation)', raw_data_sample))\n"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -408,7 +427,7 @@
         "\n",
         "extract_emojis(raw_data_sample)"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -440,7 +459,7 @@
         "pattern = re.compile(\"d\")\n",
         "pattern.search(\"dog\") "
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
