--- a/Tensorflow.ipynb
+++ b/Tensorflow.ipynb
@@ -6,7 +6,7 @@
       "name": "Tensorflow.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMeVsFUkmdS3BgZHhqT1vom",
+      "authorship_tag": "ABX9TyNOVSBEnap32LBiZcdQcn4s",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,7 +45,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mtI4UrY9UawU",
-        "outputId": "8a30f695-df34-4ad6-ad74-84ae87e24b64"
+        "outputId": "6a25953c-11e2-4241-f329-fecb4fcdad9c"
       },
       "source": [
         "import tensorflow as tf\n",
@@ -57,12 +57,12 @@
         "from tensorflow.keras.utils import plot_model\n",
         "from sklearn.datasets import make_classification\n",
         "from tensorflow.keras import Sequential\n",
-        "from tensorflow.keras.layers import Dense\n",
+        "from tensorflow.keras.layers import Dense, LSTM,GRU, RNN\n",
         "from tensorflow.keras.optimizers import SGD\n",
         "from matplotlib import pyplot\n",
         "from tensorflow.keras.models import load_model"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -1102,20 +1102,24 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "j6qQrzQrCJnc"
+        "id": "j6qQrzQrCJnc",
+        "outputId": "e8b1b882-df0d-477f-d3a3-5c75e7869069",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "Input \t\t\t\tOutput\n",
-        "1, 2, 3, 4, 5 \t\t6\n",
-        "2, 3, 4, 5, 6 \t\t7\n",
-        "3, 4, 5, 6, 7 \t\t8\n",
-        "...\n",
-        "# specify the window size\n",
-        "n_steps = 5\n",
+        "# Input \t\t\t\tOutput\n",
+        "# 1, 2, 3, 4, 5 \t\t6\n",
+        "# 2, 3, 4, 5, 6 \t\t7\n",
+        "# 3, 4, 5, 6, 7 \t\t8\n",
+        "# ...\n",
+        "# # specify the window size\n",
+        "# n_steps = 5\n",
         "\n",
         "# define model\n",
         "model = Sequential()\n",
-        "model.add(LSTM(100, activation='relu', kernel_initializer='he_normal', input_shape=(n_steps,1)))\n",
+        "model.add(LSTM(100, activation='relu', kernel_initializer='he_normal', input_shape=(5,1)))\n",
         "model.add(Dense(50, activation='relu', kernel_initializer='he_normal'))\n",
         "model.add(Dense(50, activation='relu', kernel_initializer='he_normal'))\n",
         "model.add(Dense(1))\n",
@@ -1124,10 +1128,101 @@
         "model.compile(optimizer='adam', loss='mse', metrics=['mae'])\n",
         "\n",
         "# fit the model\n",
-        "model.fit(X_train, y_train, epochs=350, batch_size=32, verbose=2, validation_data=(X_test, y_test))\n"
+        "# model.fit(X_train, y_train, epochs=350, batch_size=32, verbose=2, validation_data=(X_test, y_test))\n",
+        "\n",
+        "model.summary()"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Model: \"sequential_3\"\n",
+            "_________________________________________________________________\n",
+            "Layer (type)                 Output Shape              Param #   \n",
+            "=================================================================\n",
+            "lstm_1 (LSTM)                (None, 100)               40800     \n",
+            "_________________________________________________________________\n",
+            "dense_3 (Dense)              (None, 50)                5050      \n",
+            "_________________________________________________________________\n",
+            "dense_4 (Dense)              (None, 50)                2550      \n",
+            "_________________________________________________________________\n",
+            "dense_5 (Dense)              (None, 1)                 51        \n",
+            "=================================================================\n",
+            "Total params: 48,451\n",
+            "Trainable params: 48,451\n",
+            "Non-trainable params: 0\n",
+            "_________________________________________________________________\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "aTbn-8Ga-6Ju",
+        "outputId": "dd5fd822-c48e-49a2-8512-d9d6ece3450a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "model = tf.keras.Sequential()\n",
+        "model.add(tf.keras.layers.Embedding(input_dim=1000, output_dim=64))\n",
+        "# model.add(tf.keras.layers.GRU(256, return_sequences=True))\n",
+        "# model.add(tf.keras.layers.LSTM(64))# , return_sequences=True))\n",
+        "model.add(tf.keras.layers.Bidirectional(tf.keras.layers.SimpleRNN(128)))\n",
+        "model.add(tf.keras.layers.Dense(10))\n",
+        "model.summary()"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Model: \"sequential_11\"\n",
+            "_________________________________________________________________\n",
+            "Layer (type)                 Output Shape              Param #   \n",
+            "=================================================================\n",
+            "embedding_6 (Embedding)      (None, None, 64)          64000     \n",
+            "_________________________________________________________________\n",
+            "bidirectional (Bidirectional (None, 256)               49408     \n",
+            "_________________________________________________________________\n",
+            "dense_9 (Dense)              (None, 10)                2570      \n",
+            "=================================================================\n",
+            "Total params: 115,978\n",
+            "Trainable params: 115,978\n",
+            "Non-trainable params: 0\n",
+            "_________________________________________________________________\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "y9_eeuGf9F9N"
+      },
+      "source": [
+        "#### Input and output shapes of different layers\n",
+        "https://www.tensorflow.org/guide/keras/rnn </br>\n",
+        "\n",
+        "* TextVectorization layer output correspond to batch size and sequence length\n",
+        "* Embedding layer: Batch size, max length of a document, embedding dimensions of each word in a document\n",
+        "  * Input shape (2): (Batch size, sequence length) of TextVectorization layer\n",
+        "  * Output shape (3): (Batch size, sequence length, number of embeddings) </br>\n",
+        "Note: If u want to pass embedding layer directly through Dense layer, flatten embedding layer model.add(flatten()), beacuse if not flattened output dimension from Dense layer will also be 3. </br>\n",
+        "Embedding layer can be directly passed through LSTM, GRU, RNN\n",
+        "\n",
+        "* LSTM/GRU/RNN Layer: \n",
+        "  * Input shape (3): (Batch size, sequence length, number of embeddings) of embedding layer. All of them need input shape=3.  </br>\n",
+        "  Note: When an LSTM/RNN/GRU is passed through an another LSTM/RNN, use argument  return_sequences=True  because input shape should be 3\n",
+        "  * Output shape of LSTM/RNN is 2 by default and 3 for GRU. But when return_sequences=True argument is added  out shape of LSTM/RNN will be 3. batch size, seq length, no of neurons in the layer\n",
+        "\n",
+        "* LSTM/GRU/RNNs work better if bidirectional wrapper is used\n"
+      ]
     },
     {
       "cell_type": "markdown",
