--- a/Natural Language Processing/NLP_in_Tensorflow.ipynb
+++ b/Natural Language Processing/NLP_in_Tensorflow.ipynb
@@ -6,7 +6,7 @@
       "name": "NLP in Tensorflow.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNx8ydNOhULtbrnJX4aGojO",
+      "authorship_tag": "ABX9TyMCuU41wAm0spx1/Bd3z9E6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,6 +56,20 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dElv8YmDE_Jq"
+      },
+      "source": [
+        "!pip install tensorflow==2.3.2\n",
+        "!pip install tensorflow-text==2.3.0  # tensorflow_text\n",
+        "!pip install tfx==0.26.1 \n",
+        "!pip install tf-models-official==2.3.0"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "f-pkgVxrxql4"
@@ -63,7 +77,7 @@
       "source": [
         "* Use clothing data set to develop a pre-trained model \n",
         "  * Amazon product descriptions in metadata files: http://deepyeti.ucsd.edu/jianmo/amazon/index.html\n",
-        "  * Read data from json files: http://jmcauley.ucsd.edu/data/amazon/\n",
+        "  * Read data from json files: http://jmcauley.ucsd.edu/data/amazon/ ; https://nijianmo.github.io/amazon/index.html\n",
         "\n",
         "* clothing/fashion word embeddings https://making.lyst.com/2014/11/11/word-embeddings-for-fashion/\n",
         "* https://github.com/mvasil/fashion-compatibility\n",
@@ -82,13 +96,14 @@
         "import shutil\n",
         "import string\n",
         "import tensorflow as tf\n",
+        "import tensorflow_hub as hub\n",
         "\n",
         "from tensorflow.keras import layers\n",
         "from tensorflow.keras import losses\n",
         "from tensorflow.keras import preprocessing\n",
         "from tensorflow.keras.layers.experimental.preprocessing import TextVectorization"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -158,11 +173,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "-eBmLZ_exL14",
-        "outputId": "0c4b5b45-6897-4e41-e590-683c4a440cb2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "-eBmLZ_exL14",
+        "outputId": "0c4b5b45-6897-4e41-e590-683c4a440cb2"
       },
       "source": [
         "import tensorflow as tf\n",
@@ -179,6 +194,121 @@
           "output_type": "stream",
           "text": [
             "(3, 128) <dtype: 'float32'>\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "98mmjDzxEuB1"
+      },
+      "source": [
+        "### BERT"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1uH6rYlvF3uA"
+      },
+      "source": [
+        "import os\n",
+        "import shutil\n",
+        "\n",
+        "import tensorflow as tf\n",
+        "import tensorflow_hub as hub\n",
+        "import tensorflow_text as text\n",
+        "# from official.nlp import optimization  # to create AdamW optmizer\n",
+        "\n",
+        "# import matplotlib.pyplot as plt\n",
+        "\n",
+        "tf.get_logger().setLevel('ERROR')"
+      ],
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HDpF66S1EtPW",
+        "outputId": "d526e18a-2665-40a8-9dfc-eda3e60c45f3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# BERT pre-process model\n",
+        "tfhub_handle_preprocess = 'https://tfhub.dev/tensorflow/bert_en_uncased_preprocess/3'\n",
+        "bert_preprocess_model = hub.KerasLayer(tfhub_handle_preprocess)\n",
+        "\n",
+        "# BERT pre-trained model\n",
+        "tfhub_handle_encoder = 'https://tfhub.dev/tensorflow/small_bert/bert_en_uncased_L-4_H-512_A-8/1'\n",
+        "bert_model = hub.KerasLayer(tfhub_handle_encoder)\n",
+        "\n",
+        "text_test = ['this is such an amazing movie']\n",
+        "text_preprocessed = bert_preprocess_model(text_test)\n",
+        "\n",
+        "# input_word_ids contains numerical ids for each tokenized input\n",
+        "print(f'Keys       : {list(text_preprocessed.keys())}')\n",
+        "\n",
+        "# Max sequence length for any BERT model = 512\n",
+        "print(f'Shape      : {text_preprocessed[\"input_word_ids\"].shape}')  # sequence length = 128\n",
+        "\n",
+        "# Inputs are tokenized using vocab file\n",
+        "print(f'Word Ids   : {text_preprocessed[\"input_word_ids\"][0, :12]}')  # Tokenized sequence\n",
+        "\n",
+        "# 1 for useful tokens, 0 for padding\n",
+        "print(f'Input Mask : {text_preprocessed[\"input_mask\"][0, :12]}')  # Binary encoding to differentiate padded tokens\n",
+        "\n",
+        "print(f'Type Ids   : {text_preprocessed[\"input_type_ids\"][0, :12]}')  # indicates whether the token i belongs to sentence 1 (value 0) or 2 (value 1)\n",
+        "\n",
+        "bert_results = bert_model(text_preprocessed)\n",
+        "\n",
+        "# outputs=[pooled_output, sequence_output])\n",
+        "\n",
+        "# sequence_output for 1 sentence is 512 dimensions for 128 tokens (as 128 is max sequence length)\n",
+        "\n",
+        "# Each position outputs a vector of 512. Outputs classification CLS token\n",
+        "# We are interested in only CLS token to pass through further keras layer for classification/regression.\n",
+        "# pooled_output shape of CLS token is [batch_size, 512]  \n",
+        "\n",
+        "\n",
+        "print(f'Loaded BERT: {tfhub_handle_encoder}')\n",
+        "print(f'Pooled Outputs Shape:{bert_results[\"pooled_output\"].shape}')\n",
+        "print(f'Pooled Outputs Values:{bert_results[\"pooled_output\"][0, :12]}')\n",
+        "print(f'Sequence Outputs Shape:{bert_results[\"sequence_output\"].shape}')\n",
+        "print(f'Sequence Outputs Values:{bert_results[\"sequence_output\"][0, :12]}')"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Keys       : ['input_word_ids', 'input_mask', 'input_type_ids']\n",
+            "Shape      : (1, 128)\n",
+            "Word Ids   : [ 101 2023 2003 2107 2019 6429 3185  102    0    0    0    0]\n",
+            "Input Mask : [1 1 1 1 1 1 1 1 0 0 0 0]\n",
+            "Type Ids   : [0 0 0 0 0 0 0 0 0 0 0 0]\n",
+            "Loaded BERT: https://tfhub.dev/tensorflow/small_bert/bert_en_uncased_L-4_H-512_A-8/1\n",
+            "Pooled Outputs Shape:(1, 512)\n",
+            "Pooled Outputs Values:[ 0.94622993  0.96978396  0.13774446  0.27936164 -0.3334526   0.34829125\n",
+            "  0.94912225 -0.9515633  -0.00178645 -0.93107945 -0.04124452 -0.97975695]\n",
+            "Sequence Outputs Shape:(1, 128, 512)\n",
+            "Sequence Outputs Values:[[-0.34628797  0.25210583  0.5756581  ... -0.15549679  0.472016\n",
+            "   0.37473977]\n",
+            " [-0.5864688   0.31059366 -0.27019346 ...  0.5594992  -0.23402517\n",
+            "   0.92162156]\n",
+            " [-0.87764287  0.43894887 -0.61759305 ...  0.0450628  -0.34966043\n",
+            "   0.43843132]\n",
+            " ...\n",
+            " [-0.3622594  -0.2679375  -0.04834296 ...  0.40202618  0.5345558\n",
+            "   0.5671515 ]\n",
+            " [-1.0682071  -0.670603    0.14062242 ...  0.12432958  0.40765905\n",
+            "   0.7977506 ]\n",
+            " [-0.42452416 -0.14097393  0.02649997 ...  0.1602087   0.8911413\n",
+            "  -0.0625942 ]]\n"
           ],
           "name": "stdout"
         }
