--- a/Tensorflow.ipynb
+++ b/Tensorflow.ipynb
@@ -6,7 +6,7 @@
       "name": "Tensorflow.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNOVSBEnap32LBiZcdQcn4s",
+      "authorship_tag": "ABX9TyPP9HqP0c22U6aPaS4vin4k",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -62,7 +62,7 @@
         "from matplotlib import pyplot\n",
         "from tensorflow.keras.models import load_model"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -865,7 +865,15 @@
         "# Examples of this are the number of customers that will enter a store on a given day, the number of emails that will arrive within the next hour, or how many customers that will churn next week.\n",
         "# Computes the Poisson loss between y_true and y_pred.\n",
         "# loss = y_pred - y_true * log(y_pred)\n",
-        "model.compile(loss='mean_absolute_error')"
+        "model.compile(loss='mean_absolute_error')\n",
+        "\n",
+        "# Huber loss - https://www.analyticsvidhya.com/blog/2019/08/detailed-guide-7-loss-functions-machine-learning-python-code/\n",
+        "# https://heartbeat.fritz.ai/5-regression-loss-functions-all-machine-learners-should-know-4fb140e9d4b0\n",
+        "# Huber loss is less sensitive to outliers in data than the squared error loss. It’s also differentiable at 0. It’s basically absolute error, which becomes quadratic when error is small. How small that error has to be to make it quadratic depends on a hyperparameter, 𝛿 (delta), which can be tuned. Huber loss approaches MSE when 𝛿 ~ 0 and MAE when 𝛿 ~ ∞ (large numbers.)\n",
+        "# The Huber loss combines the best properties of MSE and MAE. It is quadratic for smaller errors and is linear otherwise (and similarly for its gradient). It is identified by its delta parameter\n",
+        "\n",
+        "# logcosh https://heartbeat.fritz.ai/5-regression-loss-functions-all-machine-learners-should-know-4fb140e9d4b0\n",
+        "# 'logcosh' works mostly like the mean squared error, but will not be so strongly affected by the occasional wildly incorrect prediction. It has all the advantages of Huber loss, and it’s twice differentiable everywhere, unlike Huber loss."
       ],
       "execution_count": null,
       "outputs": []
@@ -1103,10 +1111,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "j6qQrzQrCJnc",
-        "outputId": "e8b1b882-df0d-477f-d3a3-5c75e7869069",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "e8b1b882-df0d-477f-d3a3-5c75e7869069"
       },
       "source": [
         "# Input \t\t\t\tOutput\n",
@@ -1132,7 +1140,7 @@
         "\n",
         "model.summary()"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1162,10 +1170,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "aTbn-8Ga-6Ju",
-        "outputId": "dd5fd822-c48e-49a2-8512-d9d6ece3450a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "dd5fd822-c48e-49a2-8512-d9d6ece3450a"
       },
       "source": [
         "model = tf.keras.Sequential()\n",
@@ -1176,7 +1184,7 @@
         "model.add(tf.keras.layers.Dense(10))\n",
         "model.summary()"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
